unpackaged/objects/copado__Pipeline_Action__c.object
<CustomObject>
	<fields>
		<fullName>copado__Action__c</fullName>
		<label>Action</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Copado_Actions</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Default__c</fullName>
		<defaultValue>false</defaultValue>
		<inlineHelpText>This checkbox lets you know if this pipeline action is used as default across all the environments in the pipeline.</inlineHelpText>
		<label>Default</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Environment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>Select the environment where you want to override the default job template defined in the pipeline.</inlineHelpText>
		<label>Environment</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipLabel>Pipeline Actions</relationshipLabel>
		<relationshipName>Pipeline_Actions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Job_Template__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>This field defines the job template corresponding to the action being configured. If you want to select a different job template for this action in a particular environment, you will override the template set in the pipeline.</inlineHelpText>
		<label>Job Template</label>
		<referenceTo>copado__JobTemplate__c</referenceTo>
		<relationshipLabel>Pipeline Actions</relationshipLabel>
		<relationshipName>Pipeline_Actions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Overrides_Pipeline_Action__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>This field is automatically populated when you create a Pipeline Action record that is not the default one.</inlineHelpText>
		<label>Overrides Pipeline Action</label>
		<referenceTo>copado__Pipeline_Action__c</referenceTo>
		<relationshipLabel>Overrides</relationshipLabel>
		<relationshipName>Overrides</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Pipeline__c</fullName>
		<inlineHelpText>Select the pipeline where this action will be applied.</inlineHelpText>
		<label>Pipeline</label>
		<referenceTo>copado__Deployment_Flow__c</referenceTo>
		<relationshipLabel>Pipeline Actions</relationshipLabel>
		<relationshipName>Pipeline_Actions</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Platform__c</fullName>
		<formula>TEXT(copado__Pipeline__r.copado__Platform__c)</formula>
		<inlineHelpText>This field is auto-populated based on the platform selected in the pipeline linked to this action.</inlineHelpText>
		<label>Platform</label>
		<type>Text</type>
	</fields>
	<label>Pipeline Action</label>
	<nameField>
		<displayFormat>PA-{0000}</displayFormat>
		<label>Pipeline Action Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Pipeline Actions</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>